--- a/imgs/pixels.html
+++ b/imgs/pixels.html
@@ -5,53 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Individual Pixels</title>
-    <link type="text/css" rel="stylesheet" href="style.css">
+    <link type="text/css" rel="stylesheet" href="./client/style.css">
 </head>
 <body>
-<script>
+<button onclick="getPixels()">Get PNG pixels</button>
+<ol id="results"></ol>
 
-function newClampedArr(data){
-        let d= new Uint8ClampedArray(data)
-        console.log(d)
-        return d
-    }
-function imageData(data){
-        var img= new ImageData(data,100)
-        console.log(img)
-    }
-
-    async function getPNGpixels(){
-        const reqOptions={'method':'GET', 'Headers': {'content-type': "application/json"}}
-        await fetch('/pixels',reqOptions)
-           .then(res=>res.json())
-           .then(json=>{
-               console.log(json.data)
-               pixelGrid(newClampedArr(json.data))
-           })
-           .catch(err=>console.log(err))
-    }
-
-    function pixelGrid(arr){
-        let s=''
-        let results=document.querySelector('#results')
-        for (let i=0; i<arr.length;i++){
-            s+=`<li>${arr[i]}</li>`
-        }
-        results.innerHTML=s;
-    }
-
-  
-
-</script>
-
-<button onclick="getPNGpixels()">Get PNG pixels</button>
-<ol id="results">
-
-</ol>
-<canvas width="100">
-
-</canvas>
-
+<canvas id="canvas1" width="100"></canvas>
+<script src='./client/canvas.js'></script>
+<script src='./client/data.js'></script>
     
 </body>
 </html>
