--- a/worddisplay.html
+++ b/worddisplay.html
@@ -67,21 +67,23 @@
     });
 
     for(let i=-10;i<10;i++){
+      //Draw vertical grid lines
       svg
          .append('g')
          .append('line')
          .style('stroke', 'black')
-         .attr("stroke-width",1)
+         .attr("stroke-width",.5)
          .style('opacity',1)
          .attr("x1",xscale(i))
          .attr("y1",yscale(-10))
          .attr("x2", xscale(i))
          .attr("y2",yscale(10))
+        //Draw horizontal grid lines
       svg
          .append('g')
          .append('line')
          .style('stroke', 'black')
-         .attr("stroke-width",1)
+         .attr("stroke-width",.5)
          .style('opacity',1)
          .attr("x1",xscale(-10))
          .attr("y1",yscale(i))
